# hdk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RELEASE.md  deps.yml  installed_libs.txt  join_compileWU_slow_ref.py  test_file.txt
omniscidb/IR/: CMakeLists.txt  CardinalityEstimator.h  Context.cpp  Context.h  DateTime.cpp  DateTime.h  DateTimeEnums.h  Datum.cpp  Exception.h  Expr.cpp  Expr.h  ExprCollector.h  ExprRewriter.h  ExprVisitor.h  InputRewriter.h  LeftDeepInnerJoin.cpp  LeftDeepInnerJoin.h  Node.cpp  Node.h  OpType.h  OpTypeEnums.h  QueryBuilder.cpp  QueryBuilder.h  TargetMetaInfo.h  Type.cpp  Type.h  TypeUtils.cpp  TypeUtils.h  UnnestDetector.h
omniscidb/OSDependent/Unix/: CMakeLists.txt  omnisci_fs.cpp
omniscidb/QueryEngine/: AggregateUtils.h  AnalyticalTemplatesExtractor.cpp  AnalyticalTemplatesExtractor.h  ArithmeticIR.cpp  ArrayIR.cpp  ArrayOps.cpp  ArrowResultSet.cpp  ArrowResultSet.h  ArrowResultSetConverter.cpp  BitmapGenerators.cpp  CMakeLists.txt  CalciteDeserializerUtils.cpp  CalciteDeserializerUtils.h  CardinalityEstimator.cpp  CardinalityEstimator.h  CaseIR.cpp  CastIR.cpp  CgenState.cpp  CgenState.h  CodeGenerator.h  ColRangeInfo.cpp  ColRangeInfo.h  ColumnFetcher.cpp  ColumnFetcher.h  ColumnIR.cpp  ColumnarResults.cpp  ColumnarResults.h  CompareIR.cpp  CompilationContext.h  CompilationOptions.cpp  CompilationOptions.h  CompilationOptionsBuilder.cpp  CompilationOptionsBuilder.h  ConstantIR.cpp  CountDistinct.h  DateAdd.cpp  DateAdd.h  DateTimeIR.cpp  DateTimePlusRewrite.cpp  DateTimeTranslator.cpp  (+160 more)
omniscidb/QueryEngine/Compiler/: AddressSpace.h  Backend.cpp  Backend.h  CodegenTraits.h  CodegenTraitsDescriptor.h  CommonGpuRuntime.cpp  CommonRuntimeDefs.h  HelperFunctions.cpp  HelperFunctions.h  genx.cpp  genx.ll
omniscidb/QueryEngine/CostModel/: CMakeLists.txt  CostModel.cpp  CostModel.h  DummyCostModel.cpp  IterativeCostModel.cpp  IterativeCostModel.h  Measurements.cpp  Measurements.h
omniscidb/QueryEngine/DataRecycler/: DataRecycler.h  HashtableRecycler.cpp  HashtableRecycler.h
omniscidb/QueryEngine/Descriptors/: ColSlotContext.cpp  ColSlotContext.h  CountDistinctDescriptor.h  InputDescriptors.h  QueryFragmentDescriptor.cpp  QueryFragmentDescriptor.h  QueryMemoryDescriptor.cpp  QueryMemoryDescriptor.h  RelAlgExecutionDescriptor.cpp  RelAlgExecutionDescriptor.h  RowSetMemoryOwner.h
omniscidb/QueryEngine/Dispatchers/: ProportionBasedExecutionPolicy.h
omniscidb/QueryEngine/JoinHashTable/: BaselineHashTable.h  BaselineJoinHashTable.cpp  BaselineJoinHashTable.h  HashJoin.cpp  HashJoin.h  PerfectJoinHashTable.cpp  PerfectJoinHashTable.h
omniscidb/QueryEngine/LoopControlFlow/: JoinLoop.cpp  JoinLoop.h  JoinLoopTest.cpp  generate_loop_ref.py
omniscidb/QueryEngine/Optimization/: AnnotateInternalFunctionsPass.h
omniscidb/QueryEngine/TableFunctions/: TableFunctionCompilationContext.cpp  TableFunctionCompilationContext.h  TableFunctionExecutionContext.cpp  TableFunctionManager.h  TableFunctionsFactory.cpp  TableFunctionsFactory.h
omniscidb/QueryEngine/Visitors/: QueryPlanDagChecker.cpp  QueryPlanDagChecker.h  (+5 more)
omniscidb/ResultSet/: ArrowResultSet.cpp  ArrowResultSet.h  ArrowResultSetConverter.cpp  BitmapGenerators.cpp  BitmapGenerators.h  CMakeLists.txt  ColRangeInfo.h  ColSlotContext.cpp  CountDistinct.h  CountDistinctDescriptor.h  HyperLogLog.h  QuantileAccessors.cpp  QuantileAccessors.h  QueryMemoryDescriptor.cpp  QueryMemoryDescriptor.h  ResultSet.cpp  ResultSet.h  ResultSetBufferAccessors.h  ResultSetIteration.cpp  ResultSetStorage.cpp  ResultSetStorage.h  ResultType.h  RowSetMemoryOwner.cpp  RowSetMemoryOwner.h  StreamingTopN.cpp  StreamingTopN.h  TargetValue.cpp  TargetValue.h  TopKAggAccessors.cpp  TopKAggAccessors.h
omniscidb/ResultSetRegistry/: CMakeLists.txt  ColumnarResults.cpp  ColumnarResults.h  ResultSetMetadata.cpp  ResultSetMetadata.h  ResultSetRegistry.cpp  ResultSetRegistry.h  ResultSetTable.h  ResultSetTableToken.cpp  ResultSetTableToken.h
omniscidb/Tests/: ArrayTest.cpp  ArrowBasedExecuteTest.cpp  ArrowStorageBenchmark.cpp  ArrowStorageSqlTest.cpp  ArrowStorageTest.cpp  ArrowTestHelpers.h  BitmapGeneratorBenchmark.cpp  BumpAllocatorTest.cpp  CMakeLists.txt  CachedHashTableTest.cpp  CodeGeneratorTest.cpp  ColumnarResultsTest.cpp  CorrelatedSubqueryTest.cpp  CudaSharedMemoryTest.cpp  DataMgrWithL0Test.cpp  DataRecyclerTest.cpp  EncoderTest.cpp  ExecutionSequenceTest.cpp  FromTableReorderingTest.cpp  GpuSharedMemoryTest.cpp  GpuSharedMemoryTest.h  GpuSharedMemoryTestHelpers.cpp  GpuSharedMemoryTestHelpers.h  GpuSharedMemoryTestIntel.cpp  GpuSharedMemoryTestIntel.h  GroupByTest.cpp  InExprDetector.h  IntelGPUEnablingTest.cpp  JoinHashTableTest.cpp  L0MgrExecuteTest.cpp  L0SharedMemoryTest.cpp  NoCatalogRelAlgTest.cpp  NoCatalogSqlTest.cpp  PartitionedGroupByTest.cpp  ProfileTest.cpp  ProfileUtils.cu  QueryBuilderTest.cpp  ResultSetArrowConversion.cpp  ResultSetBaselineRadixSortTest.cpp  ResultSetTest.cpp  (+13 more)
omniscidb/UdfCompiler/: CMakeLists.txt  UdfCompiler.cpp
python/: CMakeLists.txt  setup.py.in
python/pyhdk/: __init__.py  _builder.pxd  _builder.pyx  _common.pxd  _common.pyx  _execute.pxd  _execute.pyx  _ir.pxd  _ir.pyx  _sql.pxd  _sql.pyx  _storage.pxd  _storage.pyx  calcite.pxd  calcite.pyx  hdk.py  sql.py  storage.py  test.py  version.py.in
python/tests/: conftest.py  helpers.py  test_pyhdk_api.py  test_pyhdk_bindings.py  test_pyhdk_calcite_json.py  test_pyhdk_data_import.py  test_pyhdk_sql.py  test_regtests.py  test_work_dir.py
src/: CMakeLists.txt  HDK.cpp  HDK.h  MLIRGen.cpp  MLIRGen.h  release.h
src/AST/: AST.cpp  AST.h
src/Codegen/: Backend.h  Codegen.h  Context.h
src/Engine/: Engine.h
src/ExecutionEngine/: ExecutionEngine.cpp  ExecutionEngine.h
src/Executor/: Executor.h
src/Expression/: Expression.cpp  Expression.h  Types.h
src/Kernel/: Kernel.h
src/Optimizer/: Optimizer.h
src/Shared/: Datum.h
src/mlir/: Attributes.cpp  Attributes.h  Attributes.td  CMakeLists.txt  ConstantOp.h  Dialect.cpp  Dialect.h  HDKBase.td  HDKTypes.h  Ops.cpp  Ops.h  Ops.td  Types.cpp  Types.h  Types.td
(+285 files in other folders)
